[package]
name = "comicseeder-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-web = "4"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
lettre = "0.11.10"
rand = "0.8.5"
redis = "0.27.5"
serde = "1.0.213"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.11.0", features = ["v4"] }
